--- a/src/components/components.css
+++ b/src/components/components.css
@@ -5,3 +5,21 @@
     background-color: rgb(49, 49, 141);
     border-style: none;
 }
+
+.rojo {
+    color: red;
+}
+
+.btn-ejercicio1 {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-ejercicio1:hover {
+    background-color: #45a049;
+}
